# auto-research-agent

./: README.md  main.py  pyproject.toml  requirements.txt  research_topic_prompts.py  schemas.py  system_instruction_prompts.py  test_notion.py
.github/workflows/: actions.yml
auto_research_agent/: main.py
auto_research_agent/src/: chat_utils.py  notion_utils.py  utils.py
auto_research_agent/tasks/: garment_code_related.py
